# cloud-explorer

./: .gitignore  DEVELOPMENT_RULES.md  DEV_CHECKLIST.md  PROJECT_BRIEF.md  README.md  TASK_LIST.md  test_accounts_api.py  test_accounts_http.py  test_client_factory.py  test_session_manager.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.development  .env.example  .env.production  README.md  main.py  pyproject.toml  test_aws_credentials.py
backend/app/: __init__.py
backend/app/aws/: __init__.py  client_factory.py  credentials.py  session_manager.py
backend/app/core/: config.py  security.py  ssl_utils.py  validation.py
backend/app/models/: __init__.py  aws.py  responses.py
backend/app/routers/: accounts.py  aws_clients.py  aws_profiles.py  aws_sessions.py  health.py
backend/app/tests/: conftest.py  test_config.py  test_health.py
frontend/: .env.example  .prettierrc  README.md.backup  jest.config.ts  package-lock.json  package.json
frontend/app/: globals.css
